# redis_aio_bitcoin

./: .env  pyproject.toml  test.py
app/: main.py
