[tool.poetry]
name = "redis_aio_bitcoin"
version = "0.1.0"
description = ""
authors = ["Migorithm <saka90030@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
fastapi = "^0.78.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
